# bioelfa

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pull_requests.yaml
bioelfa/: dataloader.py  geneset_compare.py  normalizer.py  setup.py
data/: 230311_datacomparison.csv
src/bioelfa/: README.md  cli.py  dashboard.py  dataloader.py  geneset_compare.py  normalizer.py  setup.py
src/bioelfa/streamlit/: Home.py
src/bioelfa/streamlit/static/: bacteria_family.csv
