# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bioelfa"
description = "Set of utilities created for Ellen Fasth."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Lorenzo Andraghetti", email = "andraghetti.l@gmail.com"}
  ]
maintainers = [
    {name = "Lorenzo Andraghetti", email = "andraghetti.l@gmail.com"}
  ]
classifiers = [
    "Programming Language :: Python"
  ]
dynamic = ["version"]

dependencies = [
    'tqdm',
    'pandas',
    'biopython',
    'numpy',
    'rich_click',
    'streamlit',
  ]

[project.optional-dependencies]
dev = [
    "black==23.1.0",
    "pre-commit",
    "build",
    "mypy"
  ]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["bioelfa*"]

[tool.setuptools.dynamic]
version = {attr = "bioelfa._version.__version__"}

[project.urls]
homepage = "https://github.com/andraghetti/bioelfa"
documentation = "https://github.com/andraghetti/bioelfa/README.md"
repository = "https://github.com/andraghetti/bioelfa"

[project.scripts]
bioelfa = "bioelfa.cli:bioelfa"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
  /(
  | \.git
  )/
  '''

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
log_cli = "0"
log_cli_level = "INFO"

[tool.mypy]
strict = false
files = ["src/**/*.py"]
ignore_missing_imports = true
pretty = true
show_column_numbers = true