# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "bioelfa"
version = "0.2.0"
description = "Set of utilities created for Ellen Fasth."
readme = ["README.md", "src/bioelfa/README.md"]
authors = ["Lorenzo Andraghetti <andraghetti.l@gmail.com>"]
maintainers = ["Lorenzo Andraghetti <andraghetti.l@gmail.com>"]
license = "MIT"
repository = "https://github.com/andraghetti/bioelfa"
homepage = "https://github.com/andraghetti/bioelfa"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ['bioinformatics']

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
bioelfa = "bioelfa.cli:bioelfa"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.0"
pandas = "^1.5.3"
biopython = "^1.81"
numpy = "^1.24.2"
rich-click = "^1.6.1"


[tool.poetry.dev-dependencies]
black = {version = "^23"}
isort = {extras = ["colors"], version = "^5.10.1"}
mypy = "^1.0.0"
pre-commit = "^2.0"

[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 90
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
strict = false
files = ["src/**/*.py"]
ignore_missing_imports = true
pretty = true
show_column_numbers = true

